# TranslateGemmaMCP

./: README.md  pyproject.toml  translateGemmaWebUI.html
src/translategemma_mcp_server/: server.py  server.py.bak
